# component-templates

./: Cargo.toml  Makefile  README.md  build.rs  component.manifest.json
.github/workflows/: ci.yml
.i18n/: translate-index.json  translator-state.json
assets/i18n/: ar-AE.json  ar-DZ.json  ar-EG.json  ar-IQ.json  ar-MA.json  ar-SA.json  ar-SD.json  ar-SY.json  ar-TN.json  ar.json  ay.json  bg.json  bn.json  cs.json  da.json  de.json  el.json  en-GB.json  en.json  es.json  et.json  fa.json  fi.json  fr-FR.json  fr.json  gn.json  gu.json  hi.json  hr.json  ht.json  hu.json  id.json  it.json  ja.json  km.json  kn.json  ko.json  lo.json  lt.json  lv.json  (+28 more)
ci/: local_check.sh
flows/: custom.ygtc  default.ygtc
schemas/: component.schema.json
schemas/io/: input.schema.json
src/: i18n.rs  i18n_bundle.rs  lib.rs
tests/: conformance.rs  i18n_assets.rs  version_and_manifest.rs
tools/: i18n.sh
wit/: world.wit
